--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <title>Chat Financeiro</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+
 </head>
 <body>
   <div class="chat-container">
-    <div id="chat" class="chat-box"></div>
-    <form id="chat-form">
-      <input type="text" id="message-input" placeholder="Digite sua mensagem..." autocomplete="off">
-      <button type="submit">Enviar</button>
-    </form>
+    <div id="chat"></div>
+
+<form id="form">
+  <input type="text" id="input" placeholder="Digite aqui...">
+  <button type="submit">Enviar</button>
+</form>
   </div>
   <script src="script.js"></script>
 </body>
