--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance Chat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <title>Chat Financeiro</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="app">
+  <div class="container">
     <header>
-      <h1>💬 Finance Chat</h1>
+      <h1>💬 Financeiro</h1>
       <div id="saldo">Saldo: R$ 0,00</div>
     </header>
-    
-    <main id="chat"></main>
-    
+
+    <div id="chat" class="chatbox"></div>
+
     <form id="form">
-      <input type="text" id="mensagem" placeholder="Ex: Ganhei 100 com freela..." required />
-      <button type="submit">Enviar</button>
+      <input type="text" id="mensagem" placeholder="Digite: Ganhei 500 ou Gastei 100" required autocomplete="off" />
+      <button type="submit">➤</button>
     </form>
-
-    <button id="reset">🗑 Limpar Histórico</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
